--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -440,12 +440,17 @@
 
 <div class="enunciado" style="text-align:justify;">
   <strong>2.a)</strong> Utilizar para tal determinação a densidade do N2O a 11k dado no artigo do Fulvio 2009. Fazer este cálculo para as 3 bandas do artigo com o A-value.
-  Aproximação prática: \(x \approx \dfrac{N}{n}\), sendo \(n\) a densidade numérica (molec·cm\(^{-3}\)).
 </div>
 
 <div class="enunciado" style="text-align:justify;">
-  <strong>2.b)</strong> <u>Alcance do feixe</u>: no SRIM/TRIM, obtenha o <em>stopping power</em> (unidades \(\mathrm{keV\,\mu m^{-1}}\)) e o alcance em N₂O. Com base em \(x\), discuta a presença de <strong>implantação</strong>.
+  <strong>2.b)</strong>Como estes valores verificar através do programa SRIM (visto na aula anterior) como o feixe se comporta em unidade de keV/microns.</strong>.
+  <br>Saberemos através destes dados se ocorreu implantação ou não do feixe na amostra.
+  <br>
+  <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/2-enun.png" target="_blank" rel="noopener">
+    https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/2-enun.png
+  </a>
 </div>
+
 
 <!-- Espaço para o print do SRIM/TRIM (como pede o enunciado) -->
 <div class="print-area" style="text-align:justify; margin-top:8px;">
