--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -443,13 +443,20 @@
 </div>
 
 <div class="enunciado" style="text-align:justify;">
-  <strong>2.b)</strong>Como estes valores verificar através do programa SRIM (visto na aula anterior) como o feixe se comporta em unidade de keV/microns.</strong>.
+  <strong>2.b)</strong>Como estes valores verificar através do programa SRIM (visto na aula anterior) como o feixe se comporta em unidade de keV/microns.
   <br>Saberemos através destes dados se ocorreu implantação ou não do feixe na amostra.
   <br>
   <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/2-enun.png" target="_blank" rel="noopener">
     https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/2-enun.png
   </a>
+  <br>
+  <img
+    src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/2-enun.png"
+    alt="Enunciado 2 — referência SRIM/TRIM"
+    style="width:50%; max-width:640px; height:auto; display:block; margin:8px auto;"
+  >
 </div>
+
 
 
 <!-- Espaço para o print do SRIM/TRIM (como pede o enunciado) -->
