--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -108,6 +108,7 @@
     src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/Anima%C3%A7%C3%A3o-a2.gif"
     style="max-width:100%;height:auto;display:block;margin:8px auto;"
     alt="Enquadramento 2300–2170 cm⁻1 e ajuste da banda 2239 cm⁻1 (Peak Resolve).">
+</div>
 
 <!-- Imagem do Result -->
 <div class="print-area" style="text-align:center;">
@@ -116,10 +117,11 @@
     src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/a3.png"
     style="max-width:100%;height:auto;display:block;margin:8px auto;"
     alt="Result: seleção 2300–2170 cm⁻1 (banda ν3).">
+</div>
 
 <!-- Tabela centralizada com legenda em cima -->
 <div class="print-area" style="text-align:center;">
-  <div style="font-weight:bold; margin:6px auto 4px auto;">Tabela 1 — Componentes Voigt (2300–2170 cm⁻¹)
+  <div style="font-weight:bold; margin:6px auto 4px auto;">Tabela 1 — Componentes Voigt (2300–2170 cm⁻¹)</div>
   <div style="display:inline-block; text-align:left; margin:0 auto;">
     <table border="1" cellpadding="6" style="border-collapse:collapse; margin:auto;">
       <thead style="background:#f5f5f5">
@@ -154,7 +156,7 @@
     Eu somei as áreas dos componentes na faixa 2300–2170 cm⁻¹ e obtive a área integrada da banda ν₃:
     <strong>A = 39,3823&nbsp;absorbance·cm⁻¹</strong>.
   </p>
-
+</div>
 
 
 
@@ -236,7 +238,7 @@
     src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/c3.png?raw=1"
     style="max-width:100%;height:auto;display:block;margin:8px auto;"
     alt="c3: Peak Resolve na janela 2300–2170 cm⁻1.">
-
+</div>
 
 <!-- Tabela de áreas e N (c1, c2, c3) -->
 <div class="print-area" style="text-align:center;">
@@ -302,7 +304,7 @@
   <strong>c3</strong> (2300–2170&nbsp;cm⁻¹), conforme Fulvio (2009).
 </p>
 
-</div>
+
 <!-- ===================== SEÇÃO 2  ===================== -->
 <h3 style="text-align:justify;">2) Determinação da espessura do gelo</h3>
 
