--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -463,39 +463,58 @@
 </div>
     
 
+<!-- ===================== SEÇÃO 3 (texto original, apenas formatado/justificado) ===================== -->
+<h3 style="text-align:justify;">3) Análise de bandas para a amostra não irradiada (bandas Pai) e o correspondente para irradiação nas diversas fluências</h3>
 
-<!-- ===================== SEÇÃO 3 (mantida, apenas justificando títulos e parágrafos) ===================== -->
-<h3 style="text-align:justify;">3) Bandas “Pai” (não irradiada) e evolução com a fluência</h3>
 <div class="enunciado" style="text-align:justify;">
-  <strong>3.1)</strong> <u>Identificação</u>: no espectro não irradiado, identifique picos em 589, 1166, 1295, 2239, 2581, 3380 e 3706&nbsp;cm\(^{-1}\). Associe espécies (e contaminantes) confrontando com Fulvio (2009), Tabela&nbsp;3, e literatura.
+  3.1- Identificar através do programa OMINIC os picos do N2O dados abaixo (amostra não irradiada) e conferir com os que são descritos em Fulvio 2009[5] - Tabela 3. Quais as substâncias correspondestes? Quais podemos classificar como contaminantes? &nbsp;  Obs.: Pesquisar na literatura as bandas que não estão na tabela.
+  <br>
+  Bandas para os picos em: &nbsp; 589, 1166, 1295, 2239, 2581, 3380, 3706
 </div>
 <div class="print-area" style="text-align:justify;"><strong>Print 5</strong><br><em>(Inserir captura: picos “Pai”)</em></div>
-<div class="enunciado" style="text-align:justify;"><strong>3.2)</strong> Integre as áreas dessas bandas no espectro não irradiado.</div>
-<div class="enunciado" style="text-align:justify;"><strong>3.3)</strong> Repita a integração para todas as fluências e, quando pertinente, estime \(N\).</div>
+
 <div class="enunciado" style="text-align:justify;">
-  <strong>3.4)</strong> Gere gráficos no Origin/Python:
-  <br>• <em>Área × Fluência</em> &nbsp;&nbsp;• <em>Densidade de Coluna</em> \((N)\) <em>× Fluência</em>.
+  3.2 - Determinar as áreas das bandas correspondentes a estes picos.
+</div>
+
+<div class="enunciado" style="text-align:justify;">
+  3.3 - Determinar as áreas das bandas correspondentes a estes picos para as diversas fluências de irradiação.
+</div>
+
+<div class="enunciado" style="text-align:justify;">
+  3.4 - Fazer os gráficos com estes valores no programa ORIGIN:
+  <br>3.4.1 - Gráfico Área X  fluência
+  <br>3.4.2 - Gráfico Densidade de coluna (N)  X fluência
 </div>
 <div class="print-area" style="text-align:justify;"><strong>Print 6</strong><br><em>(Inserir gráficos: Área×Fluência e N×Fluência — “Pai”)</em></div>
-<div class="enunciado" style="text-align:justify;"><strong>3.5)</strong> Compare tendências com Fulvio (2009), Fig.&nbsp;4b (saturação, mudanças de perfil, deslocamentos).</div>
 
-<h3 style="text-align:justify;">4) Bandas “Filho” (produtos formados)</h3>
 <div class="enunciado" style="text-align:justify;">
-  <strong>4.1)</strong> <u>Evolução espectral</u>: acompanhe picos em 781, 1040, 1702, 1718 e 2139&nbsp;cm\(^{-1}\) do não irradiado até a maior fluência. Proponha atribuições com base na literatura.
+  3.5 - Comparar os resultados obtidos dos gráficos com o trabalho do Fulvio 2009[5], Figura 4b do artigo.
+</div>
+
+<!-- ===================== SEÇÃO 4 (texto original, apenas formatado/justificado) ===================== -->
+<h3 style="text-align:justify;">4) Análise de bandas Filho para a amostra irradiada com diversos valores de fluência</h3>
+
+<div class="enunciado" style="text-align:justify;">
+  4.1- Identificar através do programa OMINIC a evolução das bandas com os picos dados abaixo, desde a amostra não irradiada até a irradiação com o maior valor de fluência. Quais as substâncias correspondestes?
+  <br>
+  Bandas Filho para os picos em: &nbsp; 781, 1040, 1702, 1718, 2139
 </div>
 <div class="print-area" style="text-align:justify;"><strong>Print 7</strong><br><em>(Inserir captura: evolução das bandas “Filho”)</em></div>
-<div class="enunciado" style="text-align:justify;"><strong>4.2)</strong> Integre áreas e (quando aplicável) estime \(N\).</div>
-<div class="enunciado" style="text-align:justify;"><strong>4.3)</strong> Plote <em>Área × Fluência</em> e <em>\(N\) × Fluência</em>; discuta formação, destruição e sputtering.</div>
+
+<div class="enunciado" style="text-align:justify;">
+  4.2 - Determinar as áreas das bandas correspondentes a estes picos.
+</div>
+
+<div class="enunciado" style="text-align:justify;">
+  4.3 - Fazer os gráficos com estes valores no programa ORIGIN:
+  <br>4.3.1 - Gráfico Área X  fluência
+  <br>4.3.2 - Gráfico Densidade de coluna (N)  X fluência
+</div>
 <div class="print-area" style="text-align:justify;"><strong>Print 8</strong><br><em>(Inserir gráficos: Área×Fluência e N×Fluência — “Filho”)</em></div>
 
-<h3 style="text-align:justify;">5) Entrega</h3>
-<p style="text-align:justify;">
-  Versão online (GitHub Pages) é esta página.
-  <br>
-  <a href="https://thallescotta.github.io/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/3rd_exercise_FTIR_N2O_irradiation_analysis.html" target="_blank" rel="noopener">
-    https://thallescotta.github.io/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/3rd_exercise_FTIR_N2O_irradiation_analysis.html
-  </a>
-</p>
+  
+
 
 
 
