Update headings and formatting in HTML file

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -86,7 +86,7 @@
   </div>
 
   <div class="atividade-section">
-    <h2>Roteiro Prático (OMNIC → Cálculos → Gráficos)</h2>
+    <h2>Roteiro Prático</h2>
 
 
 
@@ -214,30 +214,30 @@
     
 <div class="enunciado" style="text-align:justify; margin-top:16px;">
   <strong>1.c)</strong> Escolher os 3 picos contidos no artigo do Fulvio-2009[5] (Tabela 4). Determinar a área dos mesmos e calcular a densidade de coluna usando o A-value da tabela e a eq. 2.
-  <br>Obs.: A terceira banda de maior intensidade do N2O (em 589 cm-1 ν2) não foi analisada em Fulvio[5].
+  <br>Obs.: A terceira banda de maior intensidade do N2O (em 589 cm⁻¹ ν2) não foi analisada em Fulvio[5].
 </div>
 
 
 <!-- c1, c2, c3 na ordem pedida -->
 <div class="print-area" style="text-align:center;">
 
-  <strong>c1 — Janela 1310–1280&nbsp;cm⁻¹</strong><br>
+  <strong>(c1) Janela 1310–1280&nbsp;cm⁻¹</strong><br>
   <img
     src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/c1.png?raw=1"
     style="max-width:100%;height:auto;display:block;margin:8px auto;"
-    alt="c1: Peak Resolve na janela 1310–1280 cm⁻1.">
+    alt="c1: Peak Resolve na janela 1310 - 1280 cm⁻¹.">
 
-  <strong>c2 — Janela 2600–2565&nbsp;cm⁻¹</strong><br>
+  <strong>(c2) Janela 2600–2565&nbsp;cm⁻¹</strong><br>
   <img
     src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/c2.png?raw=1"
     style="max-width:100%;height:auto;display:block;margin:8px auto;"
-    alt="c2: Peak Resolve na janela 2600–2565 cm⁻1.">
+    alt="c2: Peak Resolve na janela 2600 - 2565 cm⁻¹.">
 
-  <strong>c3 — Janela 2300–2170&nbsp;cm⁻¹</strong><br>
+  <strong>(c3) Janela 2300–2170&nbsp;cm⁻¹</strong><br>
   <img
     src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/c3.png?raw=1"
     style="max-width:100%;height:auto;display:block;margin:8px auto;"
-    alt="c3: Peak Resolve na janela 2300–2170 cm⁻1.">
+    alt="c3: Peak Resolve na janela 2300 - 2170 cm⁻¹.">
 </div>
 
 <!-- Tabela de áreas e N (c1, c2, c3) -->
