--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -304,7 +304,7 @@
   <strong>c3</strong> (2300–2170&nbsp;cm⁻¹), conforme Fulvio (2009).
 </p>
 
-
+<div class="print-area" style="text-align:justify; margin-top:8px;">
 <!-- ===================== SEÇÃO 2  ===================== -->
 <h3 style="text-align:justify;">2) Determinação da espessura do gelo</h3>
 
@@ -313,7 +313,7 @@
 </p>
 
 <!-- [Local adequado] – micro-tabelas pequenas da planilha (Ref.[7]) -->
-<div class="print-area" style="text-align:justify; margin-top:8px;">
+<div style="text-align:justify; margin-top:8px;">
   <div style="font-weight:600;">Dados da planilha (Ref.[7])</div>
   <div style="
       display:flex; flex-wrap:wrap; gap:10px; 
@@ -457,7 +457,7 @@
 
 
 <!-- Espaço para o print do SRIM/TRIM (como pede o enunciado) -->
-<div class="print-area" style="text-align:justify; margin-top:8px;">
+<div style="text-align:justify; margin-top:8px;">
   <strong>Print 4</strong><br>
   <em>(Inserir captura: resultados SRIM/TRIM e conclusão)</em>
 </div>
