Fix HTML syntax in FTIR analysis file

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -241,7 +241,7 @@
 </div>
 
 <!-- Tabela de áreas e N (c1, c2, c3) -->
-<div class="print-area" style="text-align:center;">
+<class="print-area" style="text-align:center;">
   <div style="display:inline-block; text-align:left; margin:0 auto;">
     <table border="1" cellpadding="6" style="border-collapse:collapse; margin:auto;">
       <thead style="background:#f5f5f5">
@@ -292,7 +292,6 @@
         </tr>
       </tfoot>
     </table>
-  </div>
 
 <p class="muted" style="text-align:justify; max-width:900px; margin:6px auto 0;">
   Procedimento: com o <em>baseline</em> corrigido, ajustei componentes Voigt em
