--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -241,7 +241,7 @@
 
 
 <!-- Tabela de áreas e N (c1, c2, c3) -->
-<class="print-area" style="text-align:center;">
+<div class="print-area" style="text-align:center;">
   <div style="display:inline-block; text-align:left; margin:0 auto;">
     <table border="1" cellpadding="6" style="border-collapse:collapse; margin:auto;">
       <thead style="background:#f5f5f5">
@@ -302,8 +302,6 @@
   <strong>c1</strong> (1310–1280&nbsp;cm⁻¹), <strong>c2</strong> (2600–2565&nbsp;cm⁻¹) e
   <strong>c3</strong> (2300–2170&nbsp;cm⁻¹), conforme Fulvio (2009).
 </p>
-
-</div>
     
 <div class="print-area" style="text-align:justify; margin-top:8px;">
 <!-- ===================== SEÇÃO 2  ===================== -->
