Fix HTML tag for enunciado class

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -212,7 +212,7 @@
     
 
     
-<div class="enunciado" style="text-align:justify; margin-top:16px;">
+<class="enunciado" style="text-align:justify; margin-top:16px;">
   <strong>1.c)</strong> Escolher os 3 picos contidos no artigo do Fulvio-2009[5] (Tabela 4). Determinar a área dos mesmos e calcular a densidade de coluna usando o A-value da tabela e a eq. 2.
   <br>Obs.: A terceira banda de maior intensidade do N2O (em 589 cm⁻¹ ν2) não foi analisada em Fulvio[5].
 </div>
