Update section title and comments in HTML file

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -86,13 +86,14 @@
   </div>
 
   <div class="atividade-section">
-    <h2>Roteiro Prático</h2>
+    <h2>ROTEIRO: Análise no programa OMNIC dos dados do N2O irradiados com Xe a 90 MeV.</h2>
 
 
 
 
 
-<!-- 1.a) Espectro não irradiado — abertura, ajuste e espessura -->
+<!-- 1. Utilizando o programa OMNIC:
+    1.a) Abrir o espectro sem irradiar, para determinar a espessura do filme formado. -->
 <div class="enunciado">
   <strong>a.</strong> Abrir o espectro sem irradiar, para determinar a espessura do filme formado.
 </div>
