--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -91,9 +91,10 @@
 
 
 
-
-<!-- 1. Utilizando o programa OMNIC:
-    1.a) Abrir o espectro sem irradiar, para determinar a espessura do filme formado. -->
+<div class="dicas">
+<!-- 1. Utilizando o programa OMNIC: -->
+<!-- 1.a) Abrir o espectro sem irradiar, para determinar a espessura do filme formado. -->
+</div>
 <div class="enunciado">
   <strong>a.</strong> Abrir o espectro sem irradiar, para determinar a espessura do filme formado.
 </div>
