Refactor HTML structure for activity section

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -91,12 +91,21 @@
 
 
 
-<div class="dicas">
-<!-- 1. Utilizando o programa OMNIC: -->
-<!-- 1.a) Abrir o espectro sem irradiar, para determinar a espessura do filme formado. -->
-</div>
-<div class="enunciado">
-  <strong>a.</strong> Abrir o espectro sem irradiar, para determinar a espessura do filme formado.
+<div class="atividade-section">
+
+  <!-- ABRE A CAIXA AMARELA AQUI -->
+  <div class="dicas">
+
+    <h2>Roteiro Prático (OMNIC → Cálculos → Gráficos)</h2>
+
+    <!-- 1.a) -->
+    <div class="enunciado">
+      <strong>a.</strong> Abrir o espectro sem irradiar, para determinar a espessura do filme formado.
+    </div>
+
+  </div> <!-- FECHA A CAIXA AMARELA AQUI -->
+
+  <!-- aqui seguem os GIFs/prints etc. que NÃO entram no amarelo -->
 </div>
 
 <!-- GIFs 1 e 2 -->
