Update header in FTIR analysis HTML file

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -96,14 +96,15 @@
   <!-- ABRE A CAIXA AMARELA AQUI -->
   <div class="dicas">
 
-    <h2>Roteiro Prático (OMNIC → Cálculos → Gráficos)</h2>
-
+    <h2>1. Utilizando o programa OMNIC:</h2>
+    
+  </div> <!-- FECHA A CAIXA AMARELA AQUI -->
     <!-- 1.a) -->
     <div class="enunciado">
       <strong>a.</strong> Abrir o espectro sem irradiar, para determinar a espessura do filme formado.
     </div>
 
-  </div> <!-- FECHA A CAIXA AMARELA AQUI -->
+
 
   <!-- aqui seguem os GIFs/prints etc. que NÃO entram no amarelo -->
 </div>
