--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -317,7 +317,10 @@
 
 <div class="print-area" style="text-align:justify; margin-top:8px;">
 <!-- ===================== SEÇÃO 2  ===================== -->
-<h3 style="text-align:justify;">2) Determinação da espessura do gelo</h3>
+<div class="dicas">
+  <h3 style="text-align:justify;">2) Determinação da espessura do gelo</h3>
+</div>
+
 
 <p style="text-align:justify; margin:0;">
   Como deste valor determinar a espessura do gelo com o arquivo EXCEL – Ref.[7]:
