Enhance analysis HTML with new sections
Added sections for determining film thickness and ice thickness.

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -101,7 +101,7 @@
   </div> <!-- FECHA A CAIXA AMARELA AQUI -->
     <!-- 1.a) -->
     <div class="enunciado">
-      <strong>a.</strong> Abrir o espectro sem irradiar, para determinar a espessura do filme formado.
+      <strong>1.a)</strong> Abrir o espectro sem irradiar, para determinar a espessura do filme formado.
     </div>
 
 
@@ -317,6 +317,10 @@
 
 <div class="print-area" style="text-align:justify; margin-top:8px;">
 <!-- ===================== SEÇÃO 2  ===================== -->
+
+  
+<div class="atividade-section">  
+  
 <div class="dicas">
   <h3 style="text-align:justify;">2) Determinação da espessura do gelo</h3>
 </div>
@@ -452,6 +456,8 @@
 </div>
 <!-- fim das micro-tabelas -->
 
+</div>
+  
 <div class="enunciado" style="text-align:justify;">
   <strong>2.a)</strong> Utilizar para tal determinação a densidade do N2O a 11k dado no artigo do Fulvio 2009. Fazer este cálculo para as 3 bandas do artigo com o A-value.
 </div>
