Add calculation section for thickness result

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -171,7 +171,7 @@
 </div>
 
 
-
+<div class="atividade-section">  
 <!-- Cálculo da espessura (justificado, com citação) -->
 <div class="calc" style="text-align:justify; margin-top:8px;">
   <strong style="font-size:1.1rem;">Resultado da espessura (letra a)</strong><br>
@@ -196,7 +196,7 @@
     <strong>Referência:</strong> Fulvio, D. <em>et al.</em> (2009).
   </div>
 </div>
-
+</div>
 
 
     
