--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -11,7 +11,7 @@
     h1, h2, h3 { margin: .6em 0 .4em; }
     hr { border: 0; border-top: 1px solid var(--line); margin: 16px 0; }
     .atividade-section { margin-top: 30px; border: 1px solid var(--line); padding: 16px; border-radius: 10px; background:#fff; }
-    .enunciado { margin: 10px 0; padding-left: 10px; border-left: 3px solid var(--line); }
+    .enunciado { background-color: #e0f2fe; border-left: 6px solid var(--brand); padding: 10px; margin-top: 20px; border-radius: 8px; }
     .print-area { border: 2px dashed #007bff; min-height: 160px; margin: 16px 0; padding: 12px; text-align: center; background-color: #f8f9fa; border-radius: 8px; }
     .dicas { background-color: #fff3cd; border-left: 6px solid #ffc107; padding: 10px; margin-top: 20px; border-radius: 8px; }
     .muted { color: var(--muted); font-size: .95em; }
